# carteira-investimento

./: .env.example  .gitignore  Dockerfile  README.md  acoes.csv  docker-compose.yml  main.py  pyproject.toml
pages/: 1_Controle.py
